Adição de pastas arquiteturais, adição de dependencia e primeira função criada para envio de emails

--- a/aumiCao/src/main/resources/application.properties
+++ b/aumiCao/src/main/resources/application.properties
@@ -1,8 +1,15 @@
-
 server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/auMiCao_Dev
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.mail.host=smtp.gamil.com
+spring.mail.port=587
+sprin.mail.username=jjoaopedrotava05@gmail.com
+spring.mail.senha=...
+spring.mail.propertis.mail.stmo.auth=true
+sprin.mail.properties.smpt,starttls.enable=treu
